--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -223,8 +223,8 @@ input {
 }
 
 .category-section select {
+  width: 110px;
   font-family: "Yekan";
-  padding: 5px;
   border-radius: 2rem;
   font-size: 1rem;
 }
@@ -275,76 +275,3 @@ input {
 }
 
 /*  */
-
-.modal {
-  display: none;
-  background: rgba(0, 0, 0, 0.8);
-  position: fixed;
-  left: 0;
-  top: 0;
-  height: 100%;
-
-  width: 100%;
-}
-
-.modal:target {
-  display: table;
-}
-.modal__dialog {
-  display: table-cell;
-  vertical-align: middle;
-}
-
-.modal__content {
-  background: rgb(255, 255, 255);
-  width: 60%;
-  min-width: 300px;
-  margin: auto;
-  position: relative;
-
-  animation: slideUp 0.3s ease-in-out;
-}
-
-.modal__header {
-  background: green;
-  color: rgba(255, 255, 255, 0.8);
-  padding: 1rem;
-  position: relative;
-}
-.modal__title {
-  margin: 0;
-}
-.modal__close {
-  color: #fff;
-  text-decoration: none;
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-}
-.modal__image {
-  display: block;
-  margin: 1rem auto;
-}
-.modal__text {
-  padding: 0 1rem;
-  line-height: 1.5;
-}
-.modal__footer {
-  padding: 1rem;
-  border-top: 1px solid #ccc;
-}
-
-@keyframes slideUp {
-  from {
-    opacity: 0;
-    bottom: -200px;
-  }
-  to {
-    opacity: 1;
-    bottom: 0;
-  }
-}
-
-.modal__body div p {
-  color: black !important;
-}
