add post Tracking Code and update status of order in admin panel

--- a/view/admin/orders.ejs
+++ b/view/admin/orders.ejs
@@ -54,7 +54,7 @@
             <td>
               <form action="/admin/orders/<%= order._id %>" method="post" id="<%= order.paymentInfo.shopTrackingCode %>">
                 <div class="category-section">
-                  <select name="category" id="category" class="category">
+                  <select name="status" id="status" class="status">
                     <option <%= (order.status=== 0) ? "selected" : "" %> value="0">لغو شده</option>
                     <option <%= (order.status=== 1) ? "selected" : "" %> value="1">پرداخت نشده</option>
                     <option <%= (order.status=== 2) ? "selected" : "" %> value="2">در انتظار بسته بندی</option>
@@ -75,7 +75,7 @@
         </table>
         <span style="display: flex; text-align: center; gap: 2px; ">
           <a href="#modal" class="modal-trigger" style=" border-radius: 0 0 1.8rem 0; width: 100%; display: block; background-color: <%= (order.status === 1) ? 'red' : 'green' %>;">جزئیات</a>
-          <button type="submit" form="<%= order.paymentInfo.shopTrackingCode %>" style="border: none; font-family: Vazir ;   width: 80%; display: block; background-color: <%= (order.status === 1) ? 'red' : 'green' %>;  ">آپدیت</button>
+          <button type="submit" form="<%= order.paymentInfo.shopTrackingCode %>" style="cursor: pointer; border: none; font-family: Vazir ;   width: 80%; display: block; background-color: <%= (order.status === 1) ? 'red' : 'green' %>;  ">آپدیت</button>
           <a href="<%= (order.status !== 4) ? "#" : "/" %>" style=" border-radius: 0 0 0 1.8rem; width: 100%; display: block; background-color: <%= (order.status === 1) ? 'red' : 'green' %>; <%= (order.status < 4) ? "cursor: not-allowed;" : "" %> ">پیگیری مرسوله</a>
         </span>
       </div>
