set message of order in invoice and fix bug download invoice after pay

--- a/view/admin/order.ejs
+++ b/view/admin/order.ejs
@@ -93,6 +93,7 @@
 
         </div>
 
+        <h3>یادداشت کاربر : <%= order.note %></h3>
         <div style="display: block;
       padding: 1rem;
       border-bottom: 1px solid <%- (order.status > 1 ) ? "green" : "red" %>;">
