--- a/view/client/includes/footer.ejs
+++ b/view/client/includes/footer.ejs
@@ -130,6 +130,10 @@
 
  <script src="/js/script.js"></script>
  <script>
+   function changeText(element) {
+     element.innerHTML = "لطفا صبر کنید";
+   }
+
    const tabs = document.querySelectorAll(".tab");
 
    tabs.forEach((clickedTab) => {
