post tracking direct link

--- a/view/client/getOrders.ejs
+++ b/view/client/getOrders.ejs
@@ -48,7 +48,7 @@
       </table>
       <span style="display: flex; text-align: center; gap: 2px; ">
         <a onclick="changeText(this)" href="/api/user/downloadReceipt/<%= order._id %>" style=" border-radius: 0 0 1.8rem 0; width: 100%; display: block; background-color: <%= (order.status === 1) ? 'red' : 'green' %>;">دانلود فاکتور</a>
-        <a href="<%= (order.status !== 4) ? "#" : "/" %>" style=" border-radius: 0 0 0 1.8rem; width: 100%; display: block; background-color: <%= (order.status === 1) ? 'red' : 'green' %>; <%= (order.status < 4) ? "cursor: not-allowed;" : "" %> ">پیگیری مرسوله</a>
+        <a href="<%= (order.status !== 4) ? "#" : `https://tracking.post.ir/search.aspx?id=${order.paymentInfo.postTrackingCode}` %>" style=" border-radius: 0 0 0 1.8rem; width: 100%; display: block; background-color: <%= (order.status === 1) ? 'red' : 'green' %>; <%= (order.status < 4) ? "cursor: not-allowed;" : "" %> ">پیگیری مرسوله</a>
       </span>
     </div>
   </div>
