--- a/view/admin/getComments.ejs
+++ b/view/admin/getComments.ejs
@@ -1,38 +1,27 @@
-<!DOCTYPE html>
-<html lang="fa" dir="rtl">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/admin.css">
-  <title>Admin of pam-pam</title>
-</head>
-
-<body>
-  <div style="display: grid;
+<%- include('./includes/head') -%>
+<%- include('./includes/header') -%>
+<div style="display: grid;
   grid-template-columns: repeat(4,1fr);
   gap: 1rem;;">
-    <% for(const comment of comments){ %>
-    <div style="border: 1px solid green; border-radius: 2rem; padding: 1rem;">
-      <form method="post" action="/admin/product/comment/<%= comment.productId %>/<%= comment.comment._id %>" style="display: flex; flex-direction: column; gap: 3px;">
-        <textarea style=" overflow: hidden; resize: vertical;font-family: Yekan; padding: 0.5rem; border-radius: 2rem;" type="text" name="comment"><%= comment.comment.comment.comment %></textarea>
-        <textarea style=" overflow: hidden; resize: vertical;font-family: Yekan; padding: 0.5rem; border-radius: 2rem;" type="text" placeholder="بدون پاسخ" name="reply"><%= comment.comment.reply %></textarea>
-        <input type="submit" id="submit-form" style="display: none;" />
-        <button class="btn" type="submit">update</button>
-      </form>
-      <span style="  display: flex; align-items: center; justify-content: space-between;">
-        <p style="color: white;
+  <% for(const comment of comments){ %>
+  <div style="border: 1px solid green; border-radius: 2rem; padding: 1rem;">
+    <form method="post" action="/admin/product/comment/<%= comment.productId %>/<%= comment.comment._id %>" style="display: flex; flex-direction: column; gap: 3px;">
+      <textarea style=" overflow: hidden; resize: vertical;font-family: Yekan; padding: 0.5rem; border-radius: 2rem;" type="text" name="comment"><%= comment.comment.comment.comment %></textarea>
+      <textarea style=" overflow: hidden; resize: vertical;font-family: Yekan; padding: 0.5rem; border-radius: 2rem;" type="text" placeholder="بدون پاسخ" name="reply"><%= comment.comment.reply %></textarea>
+      <input type="submit" id="submit-form" style="display: none;" />
+      <button class="btn" type="submit">update</button>
+    </form>
+    <span style="  display: flex; align-items: center; justify-content: space-between;">
+      <p style="color: white;
         border: 2px solid green;
         direction: ltr;
         padding: 5px;
         text-align: center; border-radius: 2rem;"><%= comment.comment.comment.createdAt.toLocaleString('fa-IR-u-nu-latn') %></p>
-        <a class="btn" style=" color: red; background-color: black;
+      <a class="btn" style=" color: red; background-color: black;
         text-decoration: none;" href="/admin/product/comment/<%= comment.productId %>/<%= comment.comment._id %>">delete</a>
-      </span>
-    </div>
-    <% } %>
+    </span>
   </div>
-</body>
+  <% } %>
+</div>
 
-</html>
+<%- include('./includes/footer') -%>
