--- a/view/admin/products.ejs
+++ b/view/admin/products.ejs
@@ -1,27 +1,21 @@
-<!DOCTYPE html>
-<html lang="fa">
+<%- include('./includes/head') -%>
+<%- include('./includes/header') -%>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/admin.css">
-  <title>Admin on pam-pam</title>
-</head>
-
-<body>
-  <div class="products-container">
-    <% for(const product of products){ %>
-    <div>
-      <img src="<%= product.imageUrl[0] %>" alt="">
-      <h4><%= product.name %></h4>
-      <p><%= product.price %></p>
-      <a class="btn" href="/admin/deleteProduct/<%= product._id %>">Delete</a>
-      <a class="btn" href="/admin/product/<%= product._id %>">Edit</a>
-      <a href="/admin/product/comments/<%= product._id %>">Comments</a>
-    </div>
-    <% } %>
+<div class="products-container">
+  <% for(const product of products){ %>
+  <div>
+    <img src="<%= product.imageUrl[0] %>" alt="">
+    <h4><%= product.name %></h4>
+    <p><%= product.price %></p>
+    <a class="btn" href="/admin/deleteProduct/<%= product._id %>">Delete</a>
+    <a class="btn" href="/admin/product/<%= product._id %>">Edit</a>
+    <a href="/admin/product/comments/<%= product._id %>">Comments</a>
   </div>
-</body>
+  <% } %>
+</div>
 
-</html>
+
+<a href="/admin/addProduct" class="plus">
+  <i class='bx bx-plus bx-sm'></i>
+</a>
+<%- include('./includes/footer') -%>
