see all files uploaded by type category

--- a/view/admin/includes/header.ejs
+++ b/view/admin/includes/header.ejs
@@ -4,7 +4,14 @@
   <a href="/admin/orders">سفارشات</a>
   <a href="/admin/products/comments">کامنت ها</a>
   <a href="">کاربران</a>
-  <a href="/admin/uploads">فایل ها</a>
+  <div class="dropdown">
+    <button class="dropbtn">فایل ها</button>
+    <div class="dropdown-content">
+      <a href="/admin/uploads/images">عکس ها</a>
+      <a href="/admin/uploads/videos">فیلم ها</a>
+      <a href="/admin/uploads/voices">صدا ها</a>
+    </div>
+  </div>
   <a href="/admin/upload">آپلود</a>
 
 </header>
