--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -353,3 +353,59 @@ header a {
   text-align: center;
   border-radius: 2rem;
 }
+
+.dropbtn {
+  background-color: black;
+  color: green;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  font-family: Vazir;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: black;
+  text-align: center;
+  min-width: 160px;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: green;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  text-shadow: 2px 2px 2px green;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.uploads-images {
+  position: relative;
+}
+.uploads-images span {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 10px;
+  right: 0;
+  width: 100%;
+}
+
+.uploads-images span a {
+  font-size: 12px;
+}
